--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.460.0",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -26,6 +28,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
     "sass": "^1.79.4",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
